# ichosynth

./: .gitattributes  .gitignore  BUILD_MANUAL.md  DEV_ENVIRONMENT.md  LICENSE  MANUALE_AMBIENTE.md  MANUALE_COSTRUZIONE.md  MANUALE_USO.md  README.it.md  README.md  USAGE_MANUAL.md  _HANDOFF.md  audioinit.h  config.h  display.h  soundpauli_ni404.ino
.github/workflows/: build.yml
_DOCS/: FEATURE_INVENTORY.md  MAPPA_CONTROLLI.md  wiring.txt
_DOCS/_PCB/ni404/production/: bom.csv  positions.csv
_FLASHER/: flasher_gui.py  ichosynth.hex  teensy_native.py
_SDCARD/: README.md  build_samples.py  wavmaker.py  wavmaker_gui.py
_SDCARD/3/: README.txt
_WORKSHOP/: APPUNTI_DOCENTE.md  ICHOSYNTH_Costruzione.pptx  INTRO_TEENSY_E_CODICE.md  QUICKSTART_COSTRUZIONE.md
assets/: _gen_assets.py  _md2pdf.py
design/: README.md  _build_design.py
design/brand/: badges.html  logo.html
design/diagrams/: assembly-flow.html  audio-io.html  encoders.html  flash-flow.html  grid-concept.html  ichos-project.html  midi-clock.html  modes-map.html  sd-structure.html  voice-colors.html  wiring-map.html
design/foundations/: colors.html  typography.html
emulator/: .gitignore  CMakeLists.txt  MANUALE.md  STATUS-toern.md  STATUS.md  run.py
emulator/compat/: Adafruit_GFX.h  Adafruit_SSD1306.h  Arduino.h  Audio.h  AudioStream.h  EEPROM.h  Encoder.h  FastLED.h  FastTouch.h  IntervalTimer.h  MIDI.h  Mapf.h  SD.h  TeensyPolyphony.h  WS2812Serial.h  Wire.h  audio_capture.h  audio_extra.h  avdweb_Switch.h  elapsedMillis.h  i2cEncoderLibV2.h  ni404_host.h  pgmspace.h  usb_midi.h
emulator/compat/newdigate/: ResamplingReader.h  audio_play_array_resmp.h  interpolation.h  loop_type.h  waveheaderparser.h
emulator/compat/utility/: dspinst.h
emulator/presets/: README.md
emulator/scripts/: bootstrap-macos.sh  bootstrap-windows.ps1  build.ps1  build.sh  gen_samples.cpp  mac-build.sh  run.ps1
emulator/src/: audio_capture.cpp  audio_decode.cpp  audio_decode.h  audio_engine.cpp  firmware.cpp  firmware_toern.cpp  host_io.cpp  main.cpp  menu.cpp  menu.h  midi_in.cpp  midi_map.cpp  ni404_prototypes.h  sample_import.cpp  sample_import.h  toern_prototypes.h
emulator/tools/: midi_listen.cpp
scripts/: setup-dev-env.ps1  setup-dev-env.sh
scripts/pdf/: README.md  build-pdfs.mjs  package-lock.json  package.json
teensy/: README.md  build_toern.py
teensy/libraries/FastTouch/: FastTouch.h
teensy/libraries/IchosOled/: IchosOled.cpp  IchosOled.h
teensy/libraries/i2cEncoderLibV2/: i2cEncoderLibV2.h
